# neorg-syntax

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: miri.yml
docs/: 1.0-specification.norg  grammer.js
examples/tests/: 00.norg  code.norg  heading.norg  implemented.norg  italics.norg  star.norg
proptest-regressions/: parser.txt
proptest-regressions/grammer/: am.txt
src/: ast.rs  errors.rs  fmt.rs  highlight.rs  kind.rs  lex.rs  lexer.rs  lib.rs  main.rs  node.rs  parse.rs  parser.rs  set.rs  span.rs  visitor.rs
src/grammer/: am.rs  dm.rs  mod.rs  old.rs
src/old/: parser.rs
src/snapshots/: neorg_syntax__parse__empty_file.snap  neorg_syntax__parse__italics_001.snap
src/tests/snapshots/: neorg_syntax__parser__test__parse_verbatim001@this.snap  (+1 more)
tests/: parse.rs  span.rs
tests/snapshots/: auto.snap.new  bold_01.snap  bold_02.snap  bold_03.snap  bold_04.snap  bold_05.snap  bold_06.snap  bold_07.snap  heading_01.snap  heading_02.snap  heading_03.snap  heading_04.snap  heading_05.snap  heading_06.snap  heading_07.snap  italics_01.snap  italics_01.snap.new  italics_02.snap  italics_02.snap.new  italics_03.snap  italics_03.snap.new  italics_04.snap  italics_04.snap.new  italics_05.snap  italics_05.snap.new  italics_06.snap  italics_06.snap.new  italics_07.snap.new  italics_08.snap  italics_08.snap.new  italics_09.snap  italics_09.snap.new  italics_10.snap  italics_10.snap.new  italics_11.snap  italics_11.snap.new  long_para_segment_01.snap  para_segment_01.snap  para_segment_01_err.snap  para_segment_02_err.snap  (+32 more)
(+28 files in other folders)
