[package]
name = "neorg-syntax"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
description = "A markdown laguage"
homepage = "https://github.com/abhinandh-s/neorg-syntax"
documentation = "https://github.com/abhinandh-s/neorg-syntax"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "utility"]

[features]
default = []
tower-lsp = ["dep:tower-lsp", "dep:ropey"]
lsp-types = ["dep:lsp-types", "dep:ropey"]

[dependencies]
derive_screaming_snake_case = "1.0.0"
ropey = { version = "1.6.1", optional = true }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

tower-lsp = { version = "0.20.0", optional = true }
lsp-types = { version = "0.97.0", optional = true }

[dev-dependencies]
insta = "1.42.1"
expect-test = "1.5.1"
quickcheck = "1"
proptest = "1"

[package.metadata.insta]
snapshot-path = "tests/snapshots"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false

[workspace.lints.rust]
unsafe_code = "warn"
unused_labels = "allow"

[workspace.lints.clippy]
perf = "deny"
unwrap_used = "deny"
expect_used = "deny"
or_then_unwrap = "deny"
panicking_unwrap = "deny"
redundant_closure = "deny"
